# opengl-text-rendering

game/: CMakeLists.txt
game/include/game/: Game.h  Sprite.h  Text.h  Texture.h  bitmap.h
game/src/: Game.cpp  SDLRenderer.cpp  Sprite.cpp  Text.cpp  Texture.cpp
